# Cpp_Starter_Template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/player/: Player.cpp  Player.hpp
test/: CMakeLists.txt
test/player/: Player-test.cpp
